# Cyclops

./: .gitignore  CONTRIBUTING.md  README.md  partitions_cam_4mb_ota.csv  partitions_xiao_8mb_ota.csv  platformio.ini
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  HARDWARE.md  README.md
firmware-p4/: .gitignore  CMakeLists.txt  flash_c6.sh  link_ipa_config.py  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32p4cam_ota
firmware-p4/components/cyclops/: CMakeLists.txt  cyclops_main.cpp
firmware-p4/components/cyclops/compat/: SD.h  esp_jpg_decode.h  img_converters.h  jpg_compat.cpp
firmware-p4/src/: CMakeLists.txt  idf_component.yml  p4_main.c
src/: OV2640.cpp  OV2640.h  audio_capture.cpp  audio_capture.h  audio_dsp.h  avi.h  biquad.h  board_stubs.cpp  branding.h  cam_settings.cpp  cam_settings.h  camera_p4.cpp  camera_p4.h  camera_pins.h  capabilities.h  clip_index.cpp  clip_index.h  clip_ring.h  cont_record.cpp  cont_record.h  diag_log.cpp  diag_log.h  fft.h  history.h  http_parse.h  main.cpp  metrics.h  metrics_svc.cpp  metrics_svc.h  motion.h  ota_update.cpp  ota_update.h  p4_audio.cpp  p4_audio.h  p4_hosted.cpp  p4_hosted.h  path_safe.h  presence.cpp  presence.h  ratelimit.h  (+13 more)
test/test_audio_dsp/: test_audio_dsp.cpp
test/test_avi/: test_avi.cpp
test/test_biquad/: test_biquad.cpp
test/test_clip_ring/: test_clip_ring.cpp
test/test_fft/: test_fft.cpp
test/test_history/: test_history.cpp
test/test_http_parse/: test_http_parse.cpp
test/test_metrics/: test_metrics.cpp
test/test_motion/: test_motion.cpp
test/test_path_safe/: test_path_safe.cpp
test/test_presence/: test_presence.cpp
test/test_ratelimit/: test_ratelimit.cpp
test/test_retention/: test_retention.cpp
test/test_sd_health/: test_sd_health.cpp
test/test_thermal/: test_thermal.cpp
test/test_wav/: test_wav.cpp
tools/: .gitignore  README.md  gen_web_assets.py  headless_test.mjs  live_mic.js  live_mic_test.mjs  make_ui_mock.py  serve_live.py
web/: audio.html  cam.html  docs.html  graphs.html  live.html  player.js  rec.html  ui.js  wifi.html
